...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomepageActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="249dp"
        android:layout_height="104dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal"
        android:rotationX="2"
        android:text="QuickCash"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose"
...
